--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.2",
+    "drizzle-kit": "^0.18.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.3",
-    "drizzle-kit": "^0.18.1"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.26.1",
     "express": "^4.17.1",
+    "pg": "^8.13.1",
     "postgres": "^3.3.5"
   }
 }
