--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch -r dotenv/config src/db/index.ts",
+    "dev": "tsx watch -r dotenv/config src/index.ts",
     "introspect": "drizzle-kit introspect:pg",
     "generate": "drizzle-kit generate:pg",
     "migrate": "tsx -r dotenv/config src/db/migrate.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^13.1.2",
     "drizzle-kit": "^0.18.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.26.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
-    "postgres": "^3.3.5"
+    "postgres": "^3.3.5",
+    "zod": "^3.23.8"
   }
 }
