--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^13.1.2",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.26.1",
     "express": "^4.17.1",
